# k_factor_algorithm

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TESTING.md  TEST_RESULTS.md  acha_k_fator.cpp  grafo_teste.txt  old.cpp  run.sh  run_tests.sh  test_cases.txt  test_input.txt  teste.cpp  tests-generator.py
output/: acha_k_fator  teste
src/: BinaryHeap.cpp  Grafo.cpp  GrafoAdapter.cpp  Matching.cpp  main.cpp
src/headers/: BinaryHeap.hpp  Emparelhamento.hpp  Grafo.hpp  GrafoAdapter.hpp  Matching.hpp
test-results/: TEST_REPORT.md
tests/: test_case_001_k2_n10.txt  test_case_002_k2_n10.txt  test_case_003_k2_n10.txt  test_case_004_k2_n10.txt  test_case_005_k2_n10.txt  test_case_006_k2_n10.txt  test_case_007_k2_n10.txt  test_case_008_k2_n10.txt  test_case_009_k2_n10.txt  test_case_010_k2_n10.txt  test_case_011_k2_n10.txt  test_case_011_k3_n10.txt  test_case_012_k2_n10.txt  test_case_012_k3_n10.txt  test_case_013_k2_n10.txt  test_case_013_k3_n10.txt  test_case_014_k2_n10.txt  test_case_014_k3_n10.txt  test_case_015_k2_n10.txt  test_case_015_k3_n10.txt  test_case_016_k2_n10.txt  test_case_016_k3_n10.txt  test_case_017_k2_n10.txt  test_case_017_k3_n10.txt  test_case_018_k2_n10.txt  test_case_018_k3_n10.txt  test_case_019_k2_n10.txt  test_case_019_k3_n10.txt  test_case_020_k2_n10.txt  test_case_020_k3_n10.txt  test_case_021_k2_n10.txt  test_case_021_k2_n50.txt  test_case_022_k2_n10.txt  test_case_022_k2_n50.txt  test_case_023_k2_n10.txt  test_case_023_k2_n50.txt  test_case_024_k2_n10.txt  test_case_024_k2_n50.txt  test_case_025_k2_n10.txt  test_case_025_k2_n50.txt  (+612 more)
(+20 files in other folders)
